Bug 346209 - Font changes do not take effect until preferences are closed.  Patch by Chris Lawson <cl-bugs-new@chrislawson.net> with bits by Ian Leue <froodian@gmail.com>, r=jeff, sr=smorgan